--- a/src/UI.fxml
+++ b/src/UI.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
@@ -62,7 +61,12 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                   </GridPane>
-                  <Button fx:id="inputRun" mnemonicParsing="false" onAction="#runBtnPressed" text="Run">
+                  <Button fx:id="inputRun" minWidth="-Infinity" mnemonicParsing="false" onAction="#runBtnPressed" text="Run">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button minWidth="-Infinity" mnemonicParsing="false" text="Clear Graph">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
@@ -71,10 +75,10 @@
             </HBox>
             <LineChart fx:id="graph" axisSortingPolicy="NONE" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="332.0" prefWidth="710.0" VBox.vgrow="ALWAYS">
               <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <NumberAxis label="Time" side="LEFT" />
               </xAxis>
               <yAxis>
-                <NumberAxis side="LEFT" />
+                <NumberAxis label="Head Position" side="LEFT" />
               </yAxis>
             </LineChart>
             <GridPane>
