3shan 3amy petersan part 2

--- a/src/UI.fxml
+++ b/src/UI.fxml
@@ -66,7 +66,7 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                   </Button>
-                  <Button minWidth="-Infinity" mnemonicParsing="false" text="Clear Graph">
+                  <Button minWidth="-Infinity" mnemonicParsing="false" text="Clear Graph" onAction="#clearBtnPressed">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
